# bluey

./: Cargo.toml  LICENSE.md  README.md  build.rs  jitpack.yml  rustfmt.toml
.github/workflows/: ci.yml
bluey/: Cargo.toml
bluey-ui/: .gitignore  Cargo.toml  README.md  settings.gradle
bluey-ui/app/: build.gradle
bluey-ui/app/libs/: bluey-debug.aar
bluey-ui/app/src/main/: AndroidManifest.xml
bluey-ui/app/src/main/java/co/bluey/blueyui/: MainActivity.java
bluey-ui/app/src/main/res/values/: themes.xml
bluey-ui/bluetooth-numbers-database/: company_ids.json
bluey-ui/src/: ble.rs  lib.rs  tokio_runtime.rs  ui.rs
bluey-web/: Cargo.toml
bluey/examples/: heart-rate-monitor.rs  scan.rs
bluey/src/: characteristic.rs  descriptor.rs  lib.rs  peripheral.rs  service.rs  session.rs  uuid.rs
bluey/src/android/: jni.rs  mod.rs  session.rs
bluey/src/fake/: session.rs
bluey/src/java/: .gitignore  build.gradle  settings.gradle
bluey/src/java/gradle/wrapper/: gradle-wrapper.properties
bluey/src/java/src/main/: AndroidManifest.xml
bluey/src/java/src/main/java/co/bluey/: BleDevice.java  BleScanner.java  BleSession.java
bluey/src/winrt/: session.rs
examples/: heart-rate-monitor.rs  scan.rs
mc-blue/: Cargo.toml  build.rs
mc-blue-web/: Cargo.toml
mc-blue/examples/: heart-rate-monitor.rs  scan.rs
mc-blue/src/: characteristic.rs  descriptor.rs  lib.rs  peripheral.rs  service.rs  session.rs
mc-blue/src/android/: jni.rs  mod.rs
mc-blue/src/fake/: session.rs
mc-blue/src/winrt/: mod.rs  session.rs
src/: characteristic.rs  lib.rs  peripheral.rs  service.rs  session.rs  uuid.rs
src/fake/: mod.rs  session.rs
src/winrt/: session.rs  uuid.rs
