[package]
name = "mc-blue"
readme = "README.md"
version = "0.1.0"
keywords = ["bluetooth", "ble", "gatt"]
categories = ["hardware-support"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bmb"

[dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"]}
env_logger = "0.8"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }
dashmap = "4"
serde = { version = "1.0", features = ["derive"] }
arrayvec = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.19.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.19.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }