[package]
name = "bluey-ui"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = "0.27.2"
wgpu = "0.13.0"
pollster = "0.2"
bluey = { path = "../bluey" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"]}
anyhow = "1"
uuid = { version = "0.8", features = ["v4"] }
futures = "0.3"
serde = "1"
serde_json = "1"
lazy_static = "1"
egui = "0.19"
egui-wgpu = { version = "0.19", features = [ "winit" ] }
egui-winit = "0.19"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
android-activity = { version = "0.4.0-beta.1", features = [ "game-activity" ] }
jni = "0.20"
ndk-context = "0.1.1"

[patch.crates-io]
winit = { git = "https://github.com/rib/winit", branch = "android-activity" }
#winit = { path="../../../winit" }

# Egui 0.19 is missing some fixes for Android so we need to build against
# git master for now
#egui = { git = "https://github.com/emilk/egui" }
#eframe = { git = "https://github.com/emilk/egui" }
#egui_demo_lib = { git = "https://github.com/emilk/egui" }
#egui = { path = "../../../egui/crates/egui" }
#eframe = { path = "../../../egui/crates/eframe" }

[features]
default = []
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="bluey-ui"
required-features = [ "desktop" ]