[package]
name = "mcblue-web"
version = "0.1.0"
authors = ["Robert Bragg <robert@sixbynine.org>"]
description = "A wasm package for Bluey McBlueFace"
keywords = ["bluetooth", "ble", "gatt"]
categories = ["hardware-support"]
license = "MIT"
repository = "https://github.com/rib/mc-blue"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
mc-blue = { path = "../mc-blue" }
uuid = { version = "0.8", features = ["wasm-bindgen"] }